--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: aqlib
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Miscellaneous R Operations
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
+Author: Adam Quek
+Maintainer: Adam Quek <adamquek79@gmail.com>
 Description: More about what it does (maybe more than one line)
 License: What license is it under?
 LazyData: TRUE
